objects/AIA_Plan_RxMandate__c.object
<CustomObject>
    <fields>
        <fullName>ExtId__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <externalId>true</externalId>
        <label>ExtId</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_Apply__c</fullName>
        <label>Mandate Apply</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Y</fullName>
                </value>
                <value>
                    <fullName>N</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mandate_Description__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandate_Effective_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Mandate_Jurisdiction__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Jurisdiction</label>
        <length>9</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mandate_Name__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Name</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Mandate_Term_Date__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Mandate Term Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Network_Rules_AliasName__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Network Rules AliasName</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Plan__c</fullName>
        <deleteConstraint>Cascade</deleteConstraint>
        <label>Plan</label>
        <referenceTo>AIA_Plan__c</referenceTo>
        <relationshipLabel>AIA Plan RxMandates</relationshipLabel>
        <relationshipName>AIA_Plan_RxMandates</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <label>AIA Plan RxMandate</label>
    <nameField>
        <displayFormat>Plan RxMandate-{000000}</displayFormat>
        <label>AIA Plan RxMandate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AIA Plan RxMandates</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <recordTypes>
        <fullName>Network_Rules</fullName>
        <active>true</active>
        <description>For Network Rules Plan Attribute</description>
        <label>Network Rules</label>
    </recordTypes>
    <recordTypes>
        <fullName>Plan_Rx_Mandate</fullName>
        <active>true</active>
        <description>For Rx Mandate Drug</description>
        <label>Plan Rx Mandate</label>
    </recordTypes>
</CustomObject>